# NekoSploit

./: CMakeLists.txt
.github/workflows/: build.yml
src/dll/: dllmain.cpp  hooks.cpp  offsets.cpp
src/injector/: gui.cpp  main.cpp  scanner.cpp  utils.cpp
